--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Client</title>
-    <link rel="stylesheet" href="./Shared.css" />
+    <link rel="stylesheet" href="./site.min.css" />
     <base href="/" />
   </head>
 
