responsive, still rough

--- a/StaticWebAppsDemo/BlazorWasm/wwwroot/index.html
+++ b/StaticWebAppsDemo/BlazorWasm/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="w-screen h-screen">
+<html class="w-full h-full">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -11,8 +11,11 @@
     <base href="/" />
   </head>
 
-  <body>
-    <div class="bg-gray-100 dark:bg-gray-500 w-screen h-screen" id="app">
+  <body class="w-full h-full">
+    <div
+      class="bg-gray-100 dark:bg-gray-500 w-full h-full overflow-hidden"
+      id="app"
+    >
       Loading...
     </div>
 
