add debug-screens to show media query match

--- a/StaticWebAppsDemo/BlazorWasm/wwwroot/index.html
+++ b/StaticWebAppsDemo/BlazorWasm/wwwroot/index.html
@@ -11,7 +11,7 @@
     <base href="/" />
   </head>
 
-  <body class="w-full h-full">
+  <body class="w-full h-full debug-screens">
     <div
       class="bg-gray-100 dark:bg-gray-500 w-full h-full overflow-hidden"
       id="app"
