--- a/Source/wwwroot/index.html
+++ b/Source/wwwroot/index.html
@@ -7,7 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>TailBlazor!</title>
+    <title>TailBlazor !</title>
+    <link rel="icon" href="awesome.svg" />
     <link rel="stylesheet" href="./TailBlazor.min.css" />
     <base href="/" />
   </head>
