--- a/Source/wwwroot/index.html
+++ b/Source/wwwroot/index.html
@@ -15,7 +15,7 @@
 
   <body class="w-full h-full">
     <div
-      class="bg-neutral-50 dark:bg-neutral-900 w-full h-full overflow-hidden"
+      class="bg-white dark:bg-neutral-900 w-full h-full overflow-hidden"
       id="app"
     >
       <div class="flex h-full">
