--- a/Source/wwwroot/index.html
+++ b/Source/wwwroot/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="w-full h-full">
-    <div class="bg-white dark:bg-neutral-900 w-full h-full overflow-hidden" id="app">
+    <div class="bg-white dark:bg-neutral-900 transition-[background-color] duration-500 w-full h-full overflow-hidden" id="app">
 
         <div class="flex flex-col w-full h-full justify-center 
                     text-black dark:text-white
