a bit of resizing

--- a/Source/wwwroot/index.html
+++ b/Source/wwwroot/index.html
@@ -17,7 +17,7 @@
         <div class="flex flex-col w-full h-full justify-center 
                     text-black dark:text-white
                     text-center font-mono tracking-widest
-                    text-lg sm:text-xl md:text-2xl lg:text-3xl">
+                    text-lg sm:text-xl md:text-2xl">
 
             <div class="relative pb-28 mx-auto">
 
