--- a/Blit/index.html
+++ b/Blit/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="./src/tailblazor-app.ts"></script>
+    <script type="module" src="./src/app.ts"></script>
     <link rel="stylesheet" href="./tailblazor.css">
     <title>TailBlazor for .NET 8</title>
   </head>
