fix up static-content

--- a/Blit/index.html
+++ b/Blit/index.html
@@ -6,6 +6,11 @@
     <script type="module" src="./src/elements.ts"></script>
     <link rel="stylesheet" href="./tailblazor.css">
     <title>TailBlazor for .NET 8</title>
+      <script>
+        window.ZeroMdConfig = {
+          cssUrls: []
+        }
+      </script>
   </head>
   <body class="m-0 p-0 w-full h-full">
     <tailblazor-app></tailblazor-app>
