add favicon, target-blank

--- a/Blit/index.html
+++ b/Blit/index.html
@@ -6,6 +6,8 @@
     <script type="module" src="./src/elements.ts"></script>
     <link rel="stylesheet" href="./tailblazor.css">
     <title>TailBlazor for .NET 8</title>
+    <link rel="icon" href="favicon.svg">
+
       <script>
         window.ZeroMdConfig = {
           cssUrls: []
