hash scrolling works

--- a/public/content/next.html
+++ b/public/content/next.html
@@ -1,6 +1,6 @@
 <div class="nav"><p class="font-bold">Plugins </p>
 <ul>
-<li><a href="/next">Tailwind</a></li>
+<li><a href="/next#tailwind">Tailwind</a></li>
 <li><a href="/next#postcss">PostCSS</a></li>
 </ul>
 <p><a href="/next#rcl">Razor Class Libraries</a>
