--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <base href="" />
     <link   rel="stylesheet" href="./tailblazor.css">
     <script type="module" src="./elements/awesome-loader.ts"></script>
     <script type="module" src="app.ts" defer></script>
