minimal index.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="m-0 p-0 w-full h-full bg-white dark:bg-neutral-900">
+<html lang="en" class="">
   
   <head>
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="" />
-    <link   rel="stylesheet" href="./tailblazor.css">
+    <link   rel="stylesheet" href="./index.css">
     <script type="module" src="./elements/awesome-loader.ts"></script>
     <script type="module" src="app.ts" defer></script>
 
@@ -15,9 +15,9 @@
     
   </head>
 
-  <body class="m-0 p-0 w-full h-full relative">
+  <body class="relative">
 
-    <awesome-loader class="absolute w-full h-full transition-opacity duration-300"></awesome-loader>
+    <awesome-loader class="absolute w-full h-full transition-opacity duration-300 ease-in"></awesome-loader>
 
     <div class="absolute w-full h-full transition-opacity duration-300 ease-out opacity-0" id="app">
       <tailblazor-app></tailblazor-app>
