--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
   <body class="relative">
 
-    <awesome-loader class="absolute w-full h-full transition-opacity duration-medium ease-in"></awesome-loader>
+    <awesome-loader class="absolute w-full h-full transition-opacity duration-medium ease-out"></awesome-loader>
 
-    <div class="absolute w-full h-full transition-opacity duration-medium ease-out opacity-0" id="app">
+    <div class="absolute w-full h-full transition-opacity duration-medium ease-in opacity-0" id="app">
       <tailblazor-app></tailblazor-app>
     </div>
 
